--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -20,7 +20,7 @@
                         {% else %}
                         class="nav-link"
                         {% endif %}
-                         href="{% url 'imgc'%}" >
+                         href="{% url 'imgc' %}" >
                             IMGC 2022
                         </a>
                     </li>
@@ -31,12 +31,12 @@
                         {% else %}
                         class="nav-link"
                         {% endif %}
-                         href="{% url 'audio_msg'%}" >
+                         href="{% url 'audio_msg' %}" >
                           Audio Messages
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/carhouse/about.html">
+                        <a class="nav-link" href="#">
                             Media & Resources <i class="arrow down"></i>
                         </a>
                         <ul>
