--- a/templates/pages/streaming.html
+++ b/templates/pages/streaming.html
@@ -30,7 +30,7 @@
 
 
                     <div class="detail">
-                        <a href="{% url 'audio_streaming'%}" class="btn btn-lg btn-theme">LISTEN LIVE</a>
+                        <a href="{% url 'listenlive'%}" class="btn btn-lg btn-theme">LISTEN LIVE</a>
 
                     </div>
                 </div>
@@ -43,7 +43,7 @@
 
 
                     <div class="detail">
-                        <a href="{% url 'video_streaming'%}" class="btn btn-lg btn-theme" width="200px" height="100px">WATCH LIVE</a>
+                        <a href="{% url 'watchlive' %}" class="btn btn-lg btn-theme" width="200px" height="100px">WATCH LIVE</a>
 
                     </div>
                 </div>
