--- a/dcitygate/static/css/style.css
+++ b/dcitygate/static/css/style.css
@@ -30,6 +30,14 @@ html, body {
  flex-wrap: wrap;
 }
 
+.message{
+  text-align: left;
+}
+
+.blog_detail_title{
+  text-align: center;
+}
+
 
 .container-1 .hexagon
 {
@@ -44,6 +52,14 @@ html, body {
 .container-1 .hexagon::hover::before
 {
   opacity:  0.8;
+}
+
+.img2{
+
+
+
+  background: #000;
+  clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
 }
 
 .container-1 .hexagon .shape
@@ -79,7 +95,7 @@ html, body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -5414,8 +5430,12 @@ footer {
 }
 
 /** Paginatin box **/
+
+
+
 .pagination-box {
     margin-bottom: 25px;
+
 }
 
 .pagination {
@@ -6162,7 +6182,7 @@ footer {
 
 /** Sub Banner start **/
 .sub-banner {
-    background: rgba(0, 0, 0, 0.04) url(../img/car-1.jpg) top left repeat;
+    background: rgba(0, 0, 0, 0.04) url(../img/bread.jpg) top left repeat;
     background-size: cover;
     height: 360px;
     background-position: center center;
@@ -6171,6 +6191,8 @@ footer {
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
+
+
 
 .sub-banner-audio {
   background: rgba(0, 0, 0, 0.04) url(../img/dimeji.jpg) top left repeat;
