--- a/dcitygate/static/css/style_drop.css
+++ b/dcitygate/static/css/style_drop.css
@@ -19,9 +19,20 @@ nav ul {
   font-weight: bold;
   display:inline-block;
   font-family:cursive;
-
-
 }
+
+
+
+.pst_welcome{
+  text-align: left;
+  margin-left: auto;
+  }
+
+
+.pst_welcome_heading{
+  color: #4E9258;
+}
+
 
 nav ul li {
   float: left;
@@ -94,26 +105,34 @@ nav ul li ul li a:hover {
 
 
 
+
 }
 .pst_title{
   text-align:left;
-  font-family:fantasy;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 1.5em;
+  font-family:Brush Script MT;
+  color: #000000;
+  font-weight: bold;
+  font-size: 30px
+
 
 }
 
-.about_wrapper{
-  padding: 30px 0px;
+.about_wrapper {
+  padding: 20px 0px;
   background: #E55B3C;
   color: #ffff;
   min-height: 100vh;
   display: flex;
   align-items: center;
+ 
+
+  
 }
 
-.featured-car{
+
+
+
+.featured-car2{
   padding: 30px 0px;
   background: #00A36C;
   color: #ffff;
@@ -154,6 +173,7 @@ h1{
 .about_wrapper .inner{
   display: flex;
   flex-wrap: wrap;
+
 }
 
 .about_wrapper .inner .image{
@@ -165,7 +185,7 @@ h1{
 .about_wrapper .inner .right_content{
   flex: 0 0 60%;
   max-width: 60%;
-  padding: 0px 10px
+  padding: 0px 5px
 }
 
 .about_wrapper .inner .image img{
@@ -177,58 +197,61 @@ h1{
 
 .about_wrapper .inner .right_content h2{
   font-size: 40px;
-  margin-bottom: 20px;
+
 
 }
 
 .about_wrapper .inner .right_content p{
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 300;
   line-height: 30px;
 }
 
 .about_wrapper .img_inner{
   width: 300px;
-  height: 300px;
-  transform: translate(20%, 3%) rotate(45deg) ;
+  height: 500px;
+
   overflow: hidden;
 }
 
-.img2{
-  transform: scale(1.2) rotate(-35deg);
+
+
+
+@media(max-width:900px) {
+  .about_wrapper .inner .image , .img_inner .img_inner .right_content .pst_welcome{
+   
+  
+  
+  width: 100%;
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  text-align: center;
+    
+ 
+}
+  
+  .pst_title{
+  text-align:left;
+  font-family:Brush Script MT;
+  color: #000000;
+  font-weight: bold;
+  font-size: 30px
+
+
 }
 
-@media(max-width:991px){
-  .about_wrapper .img_inner{
-    width: 200px;
-    height: 200px;
-
-
-    transform: translate(2%, 3%) rotate(45deg);
-  }
-  .about_wrapper .inner .image{
-    flex:0 0 32%;
-    max-width: 32%;
-  }
-  .about_wrapper .inner .right_content{
-    flex:0 0 100%;
-    max-width: 68%;
-  }
-}
-
-@media(max-width:767px) {
-  .about_wrapper .inner .image, .about_wrapper .inner .right_content{
-    flex: 0 0 68%;
-    max-width: 100%;
-
-  }
-  .about_wrapper .inner .image{
-    margin-bottom: 40px;
-
+  
+  
 
   }
 
-}
+
+
+
+
 
 .lead{
   background-color: #835C3B;
