--- a/templates/audio/audio_detail.html
+++ b/templates/audio/audio_detail.html
@@ -5,10 +5,10 @@
 {% block content %}
 {% load static %}
 
-<div class="sub-banner-audio overview-bgi">
+<div class="sub-banner overview-bgi">
     <div class="container breadcrumb-area">
         <div class="breadcrumb-areas">
-            <h1>Audio Messages</h1>
+            <h1>{{audio_detail.msg_title}}</h1>
             <ul class="breadcrumbs">
                 <li><a href="{% url 'home'%}">Home</a></li>
                 <li class="active">Audio Messages</li>
@@ -29,28 +29,25 @@
 
     <div class="container">
         <!-- Main title -->
-        <div class="main-title">
-            <h1>Transcript <span>Messages</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
+
         <div class="row">
 
-          {% for audio in audio_data %}
-          <div class="col-lg-6 col-md-6">
+
+          <div class="col-lg-4 col-md-4">
               <div class="car-box-3">
                   <div class="car-thumbnail">
                       <a href="car-details.html" class="car-img">
                           <div class="tag">New</div>
                           <div class="price-box">
-                              <span>TSC</span>
+                              <span>{{audio_detail.category}}</span>
                           </div>
-                          <img class="d-block w-100" src="{% static 'img/dimeji.jpg'%}" alt="car">
+                          <img class="d-block w-100" src="{{audio_detail.blog_photo_1.url}}" alt="car">
                       </a>
                       <div class="carbox-overlap-wrapper">
                           <div class="overlap-box">
                               <div class="overlap-btns-area">
                                   <div class="car-magnify-gallery">
-                                      <a href="{% static 'img/dimeji.jpg'%}" class="overlap-btn">
+                                      <a href="{{audio_detail.blog_photo_1.url}}" class="overlap-btn">
                                           <i class="fa fa-expand"></i>
                                           <img class="hidden" src="{% static 'img/dimeji.jpg'%}">
                                       </a>
@@ -85,25 +82,42 @@
                   </div>
                   <div class="detail">
                       <h1 class="title">
-                          <a href="car-details.html">{{audio.msg_title}}</a>
+                          <a href="">{{audio_detail.msg_title}}</a>
                       </h1>
                       <div class="location">
                           <a href="car-details.html">
-                              <i class="flaticon-pin"></i>No 120 Ajibode Junction off UI Road Ojoo, Ibadan, Oyo State,
+
                           </a>
                       </div>
                       <ul class="facilities-list clearfix">
-                          <li>{{audio.minister_name}}</li>
-                          <li>{{Published audio.created_date |date:"M d, Y" }}</li>
-                          <li>{{audio.msg_catgery}}</li>
+                          <li>{{audio_detail.minister_name}}</li>
+                          <li>{{audio_detail.created_date|date:"M d, Y"}}</li>
+
 
                       </ul>
                   </div>
+
+
+
+                  <figure >
+
+  <audio controls
+      src="{{audio_detail.msg_link}}" controls="download">
+          Your browser does not support the audio element.
+  </audio>
+  <a href="https://drive.google.com/uc?authuser=0&id={{audio_detail.id_link}}&export=download"
+  class="btn btn-lg btn-theme">
+  Download
+ </a>
+</figure>
+
               </div>
-              <iframe src="{{audio.msg_link}}" width="640" height="480" allow="autoplay"></iframe>
+
           </div>
 
-  {% endfor%}
+
+
+
 
 
 
