--- a/templates/blogs/blogs.html
+++ b/templates/blogs/blogs.html
@@ -1,15 +1,18 @@
 {% extends 'base.html' %}
-
-
+<!-- Main header end -->
 {% block content %}
 
-<div class="sub-banner-blog overview-bgi">
+{% load static %}
+
+
+
+<div class="sub-banner overview-bgi">
     <div class="container breadcrumb-area">
         <div class="breadcrumb-areas">
-            <h1>The City Gate Blog</h1>
+            <h1>The City Gate Church Blog</h1>
             <ul class="breadcrumbs">
                 <li><a href="{% url 'home'%}">Home</a></li>
-                <li class="active">Blog</li>
+                <li class="active">Transcribed Messages</li>
             </ul>
         </div>
     </div>
@@ -20,14 +23,13 @@
 
 
 
-<!-- Featured Blog start -->
 <div class="featured-car content-area">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12">
-
+                
                 <div class="row">
-                  {% for blog in blog_data %}
+                     {% for blog in blog_data %}
                     <div class="col-lg-4 col-md-6">
                         <div class="car-box-3">
                             <div class="car-thumbnail">
@@ -65,7 +67,7 @@
                             </div>
                             <div class="detail">
                                 <h1 class="title">
-                                    <a href="car-details.html">{{blog.blog_title}}</a>
+                                    <a href="{% url 'blog_detail' blog.id %}">{{blog.blog_title}}</a>
                                 </h1>
                                 <div class="location">
                                     <a href="car-details.html">
@@ -74,8 +76,8 @@
                                 </div>
                                 <ul class="facilities-list clearfix">
                                   <li>{{blog.minister_name}}</li>
-                                  <li>Published {{blog.created_date}}</li>
-                                  <li>{{blog.category}}</li>
+                                  <li>{{blog.created_date|date:"M d, Y" }}</li>
+
                                 </ul>
                             </div>
 
@@ -84,44 +86,71 @@
 
 
                     </div>
-                    {% endfor%}
-
-
-
-
-
-
-
-
+                    {% endfor %}
+                   
+              
+                  
+                 
                 </div>
                 <!-- Page navigation start -->
-                <div class="pagination-box p-box-2 text-center">
-                    <nav aria-label="Page navigation example">
+
+              <div class="pagination-box p-box-2 text-center">
+                 
+          
+
+                {% if blog_data.has_other_pages %}
+                    
                         <ul class="pagination">
+                            {% if blog_data.has_previous %}
                             <li class="page-item">
+                                <a class="page-link" href="?page={{blog_data.previous_page_number}}"><i class="fa fa-angle-left"></i></a>
+                            </li>
+                            {% else %}
+                            <li class="page-item disabled">
                                 <a class="page-link" href="#"><i class="fa fa-angle-left"></i></a>
                             </li>
-                            <li class="page-item"><a class="page-link active" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+
+                             {% endif %}
+                             {% for i in blog_data.paginator.page_range %}
+                              {% if blog_data.number == i %}
+                            <li class="page-item"><a class="page-link active" href="#">{{i}}</a></li>
+                            {% else %}
+                            <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+
+
+                            {% endif %}
+                            {% endfor %}
+                        
+                               {% if blog_data.has_next %}
                             <li class="page-item">
+                                <a class="page-link" href="?page={{blog_data.next_page_number}}"><i class="fa fa-angle-right"></i></a>
+                            </li>
+                            {% else %}
+                            <li class="page-item disabled">
                                 <a class="page-link" href="#"><i class="fa fa-angle-right"></i></a>
                             </li>
+
+                             {% endif %}
+
                         </ul>
-                    </nav>
+                    
+                {% endif %}
+                
+                  
                 </div>
+
+
+
             </div>
-            <div class="col-lg-4 col-md-12">
-                <div class="sidebar-right">
-                    <!-- Advanced search start -->
 
 
-
-                </div>
-            </div>
+ 
         </div>
-    </div>
-</div>
-<!-- Featured Blog end -->
 
-{% endblock%}
+
+    </div>
+
+</div>
+
+
+{% endblock %}
