--- a/templates/pages/imgc.html
+++ b/templates/pages/imgc.html
@@ -1,12 +1,12 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 <!-- Main header end -->
 {% block content %}
 
 {% load static %}
 
-<link rel="stylesheet" href="{% static '/css/style_imgc.css' %}">
 
-<div class="sub-banner-imgc overview-bgi">
+
+<div class="sub-banner overview-bgi">
     <div class="container breadcrumb-area">
         <div class="breadcrumb-areas">
             <h1>Image and Glory Conference 2022</h1>
@@ -66,7 +66,7 @@
                             </div>
                             <div class="detail">
                                 <h1 class="title">
-                                    <a href="car-details.html">{{blog.blog_title}}</a>
+                                    <a href="{% url 'imgc_detail' blog.id %}">{{blog.blog_title}}</a>
                                 </h1>
                                 <div class="location">
                                     <a href="car-details.html">
@@ -75,8 +75,8 @@
                                 </div>
                                 <ul class="facilities-list clearfix">
                                   <li>{{blog.minister_name}}</li>
-                                  <li>Published {{blog.created_date}}</li>
-                                  <li>{{blog.category}}</li>
+                                  <li>{{blog.created_date|date:"M d, Y" }}</li>
+
                                 </ul>
                             </div>
 
@@ -96,20 +96,50 @@
 
                 </div>
                 <!-- Page navigation start -->
-                <div class="pagination-box p-box-2 text-center">
-                    <nav aria-label="Page navigation example">
+        
+              <div class="pagination-box p-box-2 text-center">
+                 
+          
+
+                {% if blog_data.has_other_pages %}
+                    
                         <ul class="pagination">
+                            {% if blog_data.has_previous %}
                             <li class="page-item">
+                                <a class="page-link" href="?page={{blog_data.previous_page_number}}"><i class="fa fa-angle-left"></i></a>
+                            </li>
+                            {% else %}
+                            <li class="page-item disabled">
                                 <a class="page-link" href="#"><i class="fa fa-angle-left"></i></a>
                             </li>
-                            <li class="page-item"><a class="page-link active" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+
+                             {% endif %}
+                             {% for i in blog_data.paginator.page_range %}
+                              {% if blog_data.number == i %}
+                            <li class="page-item"><a class="page-link active" href="#">{{i}}</a></li>
+                            {% else %}
+                            <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+
+
+                            {% endif %}
+                            {% endfor %}
+                        
+                               {% if blog_data.has_next %}
                             <li class="page-item">
+                                <a class="page-link" href="?page={{blog_data.next_page_number}}"><i class="fa fa-angle-right"></i></a>
+                            </li>
+                            {% else %}
+                            <li class="page-item disabled">
                                 <a class="page-link" href="#"><i class="fa fa-angle-right"></i></a>
                             </li>
+
+                             {% endif %}
+
                         </ul>
-                    </nav>
+                    
+                {% endif %}
+                
+                  
                 </div>
             </div>
             <div class="col-lg-4 col-md-12">
@@ -125,4 +155,4 @@
 </div>
 <!-- Featured Blog end -->
 
-{% endblock%}
+{% endblock %}
