--- a/templates/pages/kcc.html
+++ b/templates/pages/kcc.html
@@ -2,7 +2,7 @@
 <!-- Main header end -->
 {% block content %}
 
-<div class="sub-banner-kcc overview-bgi">
+<div class="sub-banner overview-bgi">
     <div class="container breadcrumb-area">
         <div class="breadcrumb-areas">
             <h1>Kingdom Community Center</h1>
@@ -13,6 +13,7 @@
         </div>
     </div>
 </div>
+
 
 <div class="featured-car content-area">
     <div class="container">
@@ -29,7 +30,7 @@
                                     <div class="price-box">
                                         <span>{{blog.category}}</span>
                                     </div>
-                                    <img class="d-block w-100" src="{{blog.blog_photo_1.url}}" alt="car" style="min-height: 200px; max-height: 200px;>
+                                    <img class="d-block w-100" src="{{blog.blog_photo_1.url}}" alt="car" style="min-height: 200px; max-height: 200px;"">
                                 </a>
                                 <div class="carbox-overlap-wrapper">
                                     <div class="overlap-box">
@@ -58,7 +59,7 @@
                             </div>
                             <div class="detail">
                                 <h1 class="title">
-                                    <a href="car-details.html">{{blog.blog_title}}</a>
+                                    <a href="{% url 'kcc_detail' blog.id %}">{{blog.blog_title}}</a>
                                 </h1>
                                 <div class="location">
                                     <a href="car-details.html">
@@ -67,8 +68,8 @@
                                 </div>
                                 <ul class="facilities-list clearfix">
                                   <li>{{blog.minister_name}}</li>
-                                  <li>Published {{blog.created_date}}</li>
-                                  <li>{{blog.category}}</li>
+                                  <li>{{blog.created_date|date:"M d, Y" }}</li>
+
                                 </ul>
                             </div>
 
@@ -77,6 +78,9 @@
 
 
                     </div>
+
+
+
                     {% endfor%}
 
 
@@ -116,5 +120,8 @@
     </div>
 </div>
 <!-- Featured Blog end -->
+
+
+
 
 {% endblock %}
