fix audio image

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -214,20 +214,20 @@
                                 <div class="overlap-box">
                                     <div class="overlap-btns-area">
                                         <div class="car-magnify-gallery">
-                                            <a href="img/car/car-1.jpg" class="overlap-btn">
+                                            <a href="{{blog.blog_photo_1.url}}" class="overlap-btn">
                                                 <i class="fa fa-expand"></i>
                                                 <img class="hidden" src="img/car/car-1.jpg">
                                             </a>
-                                            <a href="img/car/car-2.jpg" class="hidden">
+                                            <a href="{{blog.blog_photo_2.url}}" class="hidden">
                                                 <img class="hidden" src="img/car/car-2.jpg">
                                             </a>
-                                            <a href="img/car/car-3.jpg" class="hidden">
+                                            <a href="{{blog.blog_photo_3.url}}" class="hidden">
                                                 <img class="hidden" src="img/car/car-3.jpg">
                                             </a>
-                                            <a href="img/car/car-4.jpg" class="hidden">
+                                            <a href="{{blog.blog_photo_4.url}}" class="hidden">
                                                 <img class="hidden" src="img/car/car-4.jpg">
                                             </a>
-                                            <a href="img/car/car-5.jpg" class="hidden">
+                                            <a href="{{blog.blog_photo_5.url}}" class="hidden">
                                                 <img class="hidden" src="img/car/car-5.jpg">
                                             </a>
                                         </div>
@@ -306,16 +306,16 @@
                                                 <i class="fa fa-expand"></i>
                                                 <img class="hidden" src="audio.blog_photo_1.url">
                                             </a>
-                                            <a href="audio.blog_photo_2.url" class="hidden">
+                                            <a href="{{audio.blog_photo_2.url}}" class="hidden">
                                                 <img class="hidden" src="img/car/car-2.jpg">
                                             </a>
-                                            <a href="audio.blog_photo_3.url" class="hidden">
+                                            <a href="{{audio.blog_photo_3.url}}" class="hidden">
                                                 <img class="hidden" src="img/car/car-3.jpg">
                                             </a>
-                                            <a href="audio.blog_photo_4.url" class="hidden">
+                                            <a href="{{audio.blog_photo_4.url}}" class="hidden">
                                                 <img class="hidden" src="img/car/car-4.jpg">
                                             </a>
-                                            <a href="audio.blog_photo_5.url" class="hidden">
+                                            <a href="{{audio.blog_photo_5.url}}" class="hidden">
                                                 <img class="hidden" src="img/car/car-5.jpg">
                                             </a>
                                         </div>
