--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -298,6 +298,32 @@
                                 </div>
                                 <img class="d-block w-100" src="{{audio.blog_photo_1.url}}" alt="blog_photo_1" style="min-height: 200px; max-height: 200px;">
                             </a>
+
+
+                                    <div class="carbox-overlap-wrapper">
+                                <div class="overlap-box">
+                                    <div class="overlap-btns-area">
+                                        <div class="car-magnify-gallery">
+                                            <a href="{{blog.blog_photo_1.url}}" class="overlap-btn">
+                                                <i class="fa fa-expand"></i>
+                                                <img class="hidden" src="{{blog.blog_photo_1.url}}">
+                                            </a>
+                                            <a href="{{blog.blog_photo_2.url}}" class="hidden">
+                                                <img class="hidden" src="{{blog.blog_photo_2.url}}">
+                                            </a>
+                                            <a href="{{blog.blog_photo_3.url}}" class="hidden">
+                                                <img class="hidden" src="{{blog.blog_photo_3.url}}">
+                                            </a>
+                                            <a href="{{blog.blog_photo_4.url}}" class="hidden">
+                                                <img class="hidden" src="{{blog.blog_photo_4.url}}">
+                                            </a>
+                                            <a href="{{blog.blog_photo_5.url}}" class="hidden">
+                                                <img class="hidden" src="{{blog.blog_photo_5.url}}">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                           
                         </div>
                         <div class="detail">
