fix audio image blg3

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -214,21 +214,21 @@
                                 <div class="overlap-box">
                                     <div class="overlap-btns-area">
                                         <div class="car-magnify-gallery">
-                                            <a href="{{blog.blog_photo_1.url}}" class="overlap-btn">
+                                            <a href="img/car/car-1.jpg" class="overlap-btn">
                                                 <i class="fa fa-expand"></i>
-                                                <img class="hidden" src="{{blog.blog_photo_1.url}}">
+                                                <img class="hidden" src="img/car/car-1.jpg">
                                             </a>
-                                            <a href="{{blog.blog_photo_2.url}}" class="hidden">
-                                                <img class="hidden" src="{{blog.blog_photo_2.url}}">
+                                            <a href="img/car/car-2.jpg" class="hidden">
+                                                <img class="hidden" src="img/car/car-2.jpg">
                                             </a>
-                                            <a href="{{blog.blog_photo_3.url}}" class="hidden">
-                                                <img class="hidden" src="{{blog.blog_photo_3.url}}">
+                                            <a href="img/car/car-3.jpg" class="hidden">
+                                                <img class="hidden" src="img/car/car-3.jpg">
                                             </a>
-                                            <a href="{{blog.blog_photo_4.url}}" class="hidden">
-                                                <img class="hidden" src="{{blog.blog_photo_4.url}}">
+                                            <a href="img/car/car-4.jpg" class="hidden">
+                                                <img class="hidden" src="img/car/car-4.jpg">
                                             </a>
-                                            <a href="{{blog.blog_photo_5.url}}" class="hidden">
-                                                <img class="hidden" src="{{blog.blog_photo_5.url}}">
+                                            <a href="img/car/car-5.jpg" class="hidden">
+                                                <img class="hidden" src="img/car/car-5.jpg">
                                             </a>
                                         </div>
                                     </div>
@@ -298,33 +298,30 @@
                                 </div>
                                 <img class="d-block w-100" src="{{audio.blog_photo_1.url}}" alt="blog_photo_1" style="min-height: 200px; max-height: 200px;">
                             </a>
-
-
-                                    <div class="carbox-overlap-wrapper">
+                            <div class="carbox-overlap-wrapper">
                                 <div class="overlap-box">
                                     <div class="overlap-btns-area">
                                         <div class="car-magnify-gallery">
-                                            <a href="{{audio.blog_photo_1.url}}" class="overlap-btn">
+                                            <a href="audio.blog_photo_1.url" class="overlap-btn">
                                                 <i class="fa fa-expand"></i>
-                                                <img class="hidden" src="{{audio.blog_photo_1.url}}">
+                                                <img class="hidden" src="audio.blog_photo_1.url">
                                             </a>
-                                            <a href="{{audio.blog_photo_1.url}}" class="hidden">
-                                                <img class="hidden" src="{{audio.blog_photo_1.url}}">
+                                            <a href="audio.blog_photo_2.url" class="hidden">
+                                                <img class="hidden" src="img/car/car-2.jpg">
                                             </a>
-                                            <a href="{{audio.blog_photo_1.url}}" class="hidden">
-                                                <img class="hidden" src="{{audio.blog_photo_1.url}}">
+                                            <a href="audio.blog_photo_3.url" class="hidden">
+                                                <img class="hidden" src="img/car/car-3.jpg">
                                             </a>
-                                            <a href="{{audio.blog_photo_1.url}}" class="hidden">
-                                                <img class="hidden" src="{{audio.blog_photo_1.url}}">
+                                            <a href="audio.blog_photo_4.url" class="hidden">
+                                                <img class="hidden" src="img/car/car-4.jpg">
                                             </a>
-                                            <a href="{{audio.blog_photo_1.url}}" class="hidden">
-                                                <img class="hidden" src="{{audio.blog_photo_1.url}}">
+                                            <a href="audio.blog_photo_5.url" class="hidden">
+                                                <img class="hidden" src="img/car/car-5.jpg">
                                             </a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                          
                         </div>
                         <div class="detail">
                             <h1 class="title">
